@@ -19,18 +19,23 @@ package com.android.settings.connecteddevice.audiosharing.audiostreams;
 import static com.android.settings.connecteddevice.audiosharing.audiostreams.AudioStreamsProgressCategoryController.AudioStreamState.ADD_SOURCE_BAD_CODE;
 import static com.android.settings.connecteddevice.audiosharing.audiostreams.AudioStreamsProgressCategoryController.AudioStreamState.ADD_SOURCE_FAILED;
 import static com.android.settings.connecteddevice.audiosharing.audiostreams.AudioStreamsProgressCategoryController.AudioStreamState.ADD_SOURCE_WAIT_FOR_RESPONSE;
+import static com.android.settings.connecteddevice.audiosharing.audiostreams.AudioStreamsProgressCategoryController.AudioStreamState.ADD_SOURCE_WAIT_FOR_RESPONSE_FROM_QR;
 import static com.android.settings.connecteddevice.audiosharing.audiostreams.AudioStreamsProgressCategoryController.AudioStreamState.SOURCE_ADDED;
+import static com.android.settings.connecteddevice.audiosharing.audiostreams.AudioStreamsProgressCategoryController.AudioStreamState.SOURCE_LOST;
 import static com.android.settings.connecteddevice.audiosharing.audiostreams.AudioStreamsProgressCategoryController.AudioStreamState.SOURCE_PRESENT;
 import static com.android.settings.connecteddevice.audiosharing.audiostreams.AudioStreamsProgressCategoryController.AudioStreamState.SYNCED;
 import static com.android.settings.connecteddevice.audiosharing.audiostreams.AudioStreamsProgressCategoryController.AudioStreamState.WAIT_FOR_SYNC;
 import static com.android.settings.connecteddevice.audiosharing.audiostreams.AudioStreamsProgressCategoryController.UNSET_BROADCAST_ID;
 import static com.android.settings.core.BasePreferenceController.AVAILABLE;
+import static com.android.settingslib.bluetooth.LocalBluetoothLeBroadcastAssistant.LocalBluetoothLeBroadcastSourceState.STREAMING;
 import static com.android.settingslib.flags.Flags.FLAG_AUDIO_SHARING_HYSTERESIS_MODE_FIX;
+import static com.android.settingslib.flags.Flags.FLAG_ENABLE_LE_AUDIO_SHARING;
 
 import static com.google.common.truth.Truth.assertThat;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
+import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.never;
@@ -40,7 +45,7 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.robolectric.Shadows.shadowOf;
 
-import static java.util.Collections.emptyList;
+import static java.util.Collections.emptyMap;
 
 import android.bluetooth.BluetoothAdapter;
 import android.bluetooth.BluetoothDevice;
@@ -48,10 +53,13 @@ import android.bluetooth.BluetoothLeAudioContentMetadata;
 import android.bluetooth.BluetoothLeBroadcastMetadata;
 import android.bluetooth.BluetoothLeBroadcastReceiveState;
 import android.bluetooth.BluetoothProfile;
+import android.bluetooth.BluetoothStatusCodes;
+import android.content.ComponentName;
 import android.content.Context;
 import android.os.Looper;
 import android.platform.test.flag.junit.SetFlagsRule;
 import android.view.View;
+import android.view.accessibility.AccessibilityManager;
 import android.widget.Button;
 import android.widget.TextView;
 
@@ -61,7 +69,10 @@ import androidx.preference.PreferenceScreen;
 import androidx.test.core.app.ApplicationProvider;
 
 import com.android.settings.R;
+import com.android.settings.connecteddevice.audiosharing.audiostreams.testshadows.ShadowAudioStreamScanHelper;
 import com.android.settings.connecteddevice.audiosharing.audiostreams.testshadows.ShadowAudioStreamsHelper;
+import com.android.settings.testutils.shadow.ShadowAlertDialogCompat;
+import com.android.settings.testutils.shadow.ShadowBluetoothAdapter;
 import com.android.settings.testutils.shadow.ShadowBluetoothUtils;
 import com.android.settings.testutils.shadow.ShadowThreadUtils;
 import com.android.settingslib.bluetooth.BluetoothEventManager;
@@ -84,19 +95,22 @@ import org.mockito.junit.MockitoJUnit;
 import org.mockito.junit.MockitoRule;
 import org.robolectric.RobolectricTestRunner;
 import org.robolectric.annotation.Config;
-import org.robolectric.shadows.ShadowAlertDialog;
+import org.robolectric.shadow.api.Shadow;
 import org.robolectric.shadows.androidx.fragment.FragmentController;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 
 @RunWith(RobolectricTestRunner.class)
 @Config(
         shadows = {
             ShadowBluetoothUtils.class,
             ShadowAudioStreamsHelper.class,
+            ShadowAudioStreamScanHelper.class,
             ShadowThreadUtils.class,
-            ShadowAlertDialog.class,
+            ShadowAlertDialogCompat.class,
+            ShadowBluetoothAdapter.class,
         })
 public class AudioStreamsProgressCategoryControllerTest {
     @Rule public final MockitoRule mMockitoRule = MockitoJUnit.rule();
@@ -112,11 +126,14 @@ public class AudioStreamsProgressCategoryControllerTest {
     private static final String BROADCAST_NAME_1 = "name_1";
     private static final String BROADCAST_NAME_2 = "name_2";
     private static final byte[] BROADCAST_CODE = new byte[] {1};
-    private final Context mContext = ApplicationProvider.getApplicationContext();
+    private final Context mContext = spy(ApplicationProvider.getApplicationContext());
     @Mock private LocalBluetoothManager mLocalBtManager;
     @Mock private BluetoothEventManager mBluetoothEventManager;
+    @Mock
+    private AccessibilityManager mAccessibilityManager;
     @Mock private PreferenceScreen mScreen;
     @Mock private AudioStreamsHelper mAudioStreamsHelper;
+    @Mock private AudioStreamScanHelper mAudioStreamScanHelper;
     @Mock private LocalBluetoothLeBroadcastAssistant mLeBroadcastAssistant;
     @Mock private BluetoothLeBroadcastMetadata mMetadata;
     @Mock private CachedBluetoothDevice mDevice;
@@ -129,14 +146,24 @@ public class AudioStreamsProgressCategoryControllerTest {
 
     @Before
     public void setUp() {
+        mContext.setTheme(androidx.appcompat.R.style.Theme_AppCompat);
+        ShadowBluetoothAdapter shadowBluetoothAdapter =
+                Shadow.extract(BluetoothAdapter.getDefaultAdapter());
+        shadowBluetoothAdapter.setEnabled(true);
+        shadowBluetoothAdapter.setIsLeAudioBroadcastSourceSupported(
+                BluetoothStatusCodes.FEATURE_SUPPORTED);
+        shadowBluetoothAdapter.setIsLeAudioBroadcastAssistantSupported(
+                BluetoothStatusCodes.FEATURE_SUPPORTED);
         ShadowAudioStreamsHelper.setUseMock(mAudioStreamsHelper);
+        ShadowAudioStreamScanHelper.setUseMock(mAudioStreamScanHelper);
         when(mAudioStreamsHelper.getLeBroadcastAssistant()).thenReturn(mLeBroadcastAssistant);
-        when(mAudioStreamsHelper.getAllConnectedSources()).thenReturn(emptyList());
+        when(mAudioStreamsHelper.getAllSourcesByDevice()).thenReturn(emptyMap());
         mSetFlagsRule.disableFlags(FLAG_AUDIO_SHARING_HYSTERESIS_MODE_FIX);
 
         ShadowBluetoothUtils.sLocalBluetoothManager = mLocalBtManager;
         when(mLocalBtManager.getEventManager()).thenReturn(mBluetoothEventManager);
-        when(mLeBroadcastAssistant.isSearchInProgress()).thenReturn(false);
+        when(mContext.getSystemService(AccessibilityManager.class)).thenReturn(
+                mAccessibilityManager);
 
         when(mScreen.findPreference(anyString())).thenReturn(mPreference);
 
@@ -151,6 +178,7 @@ public class AudioStreamsProgressCategoryControllerTest {
     public void tearDown() {
         ShadowBluetoothUtils.reset();
         ShadowAudioStreamsHelper.reset();
+        ShadowAlertDialogCompat.reset();
     }
 
     @Test
@@ -170,7 +198,7 @@ public class AudioStreamsProgressCategoryControllerTest {
     @Test
     public void testSetScanning() {
         mController.displayPreference(mScreen);
-        mController.setScanning(true);
+        mController.setScanningIconSpinning(true);
 
         verify(mPreference).setProgress(true);
     }
@@ -185,6 +213,7 @@ public class AudioStreamsProgressCategoryControllerTest {
         mController.onStop(mLifecycleOwner);
 
         verify(mBluetoothEventManager).unregisterCallback(any());
+        verify(mAccessibilityManager).removeAccessibilityServicesStateChangeListener(any());
     }
 
     @Test
@@ -196,8 +225,6 @@ public class AudioStreamsProgressCategoryControllerTest {
 
     @Test
     public void testOnStart_initNoDevice_showDialog() {
-        when(mLeBroadcastAssistant.isSearchInProgress()).thenReturn(true);
-
         FragmentController.setupFragment(mFragment);
         mController.setFragment(mFragment);
         mController.displayPreference(mScreen);
@@ -207,10 +234,9 @@ public class AudioStreamsProgressCategoryControllerTest {
         // Called twice, once in displayPreference, the other in init()
         verify(mPreference, times(2)).setVisible(anyBoolean());
         verify(mPreference).removeAudioStreamPreferences();
-        verify(mLeBroadcastAssistant).stopSearchingForSources();
         verify(mLeBroadcastAssistant).unregisterServiceCallBack(any());
 
-        var dialog = ShadowAlertDialog.getLatestAlertDialog();
+        var dialog = ShadowAlertDialogCompat.getLatestAlertDialog();
         assertThat(dialog).isNotNull();
         assertThat(dialog.isShowing()).isTrue();
 
@@ -225,13 +251,62 @@ public class AudioStreamsProgressCategoryControllerTest {
         assertThat(subtitle2).isNotNull();
         assertThat(subtitle2.getText())
                 .isEqualTo(mContext.getString(R.string.audio_streams_dialog_no_le_device_subtitle));
-        View leftButton = dialog.findViewById(R.id.left_button);
+        View leftButton = dialog.findViewById(android.R.id.button2);
         assertThat(leftButton).isNotNull();
         assertThat(leftButton.getVisibility()).isEqualTo(View.VISIBLE);
-        Button rightButton = dialog.findViewById(R.id.right_button);
+        Button rightButton = dialog.findViewById(android.R.id.button1);
         assertThat(rightButton).isNotNull();
         assertThat(rightButton.getText())
                 .isEqualTo(mContext.getString(R.string.audio_streams_dialog_no_le_device_button));
+        assertThat(rightButton.hasOnClickListeners()).isTrue();
+
+        dialog.cancel();
+    }
+
+    @Test
+    public void testOnStart_initTalkbackOn_showDialog() {
+        // Setup a device
+        ShadowAudioStreamsHelper.setCachedBluetoothDeviceInSharingOrLeConnected(mDevice);
+        // Enable a screen reader service
+        ShadowAudioStreamsHelper.setEnabledScreenReaderService(new ComponentName("pkg", "class"));
+
+        FragmentController.setupFragment(mFragment);
+        mController.setFragment(mFragment);
+        mController.displayPreference(mScreen);
+        mController.onStart(mLifecycleOwner);
+        shadowOf(Looper.getMainLooper()).idle();
+
+        // Called twice, once in displayPreference, the other in init()
+        verify(mPreference, times(2)).setVisible(anyBoolean());
+        verify(mPreference).removeAudioStreamPreferences();
+        verify(mAudioStreamScanHelper).stopScanning();
+        verify(mLeBroadcastAssistant).unregisterServiceCallBack(any());
+
+        var dialog = ShadowAlertDialogCompat.getLatestAlertDialog();
+        assertThat(dialog).isNotNull();
+        assertThat(dialog.isShowing()).isTrue();
+
+        TextView title = dialog.findViewById(R.id.dialog_title);
+        assertThat(title).isNotNull();
+        assertThat(title.getText())
+                .isEqualTo(
+                        mContext.getString(R.string.audio_streams_dialog_turn_off_talkback_title));
+        TextView subtitle1 = dialog.findViewById(R.id.dialog_subtitle);
+        assertThat(subtitle1).isNotNull();
+        assertThat(subtitle1.getVisibility()).isEqualTo(View.GONE);
+        TextView subtitle2 = dialog.findViewById(R.id.dialog_subtitle_2);
+        assertThat(subtitle2).isNotNull();
+        assertThat(subtitle2.getText())
+                .isEqualTo(mContext.getString(
+                        R.string.audio_streams_dialog_turn_off_talkback_subtitle));
+        View leftButton = dialog.findViewById(android.R.id.button2);
+        assertThat(leftButton).isNotNull();
+        assertThat(leftButton.getVisibility()).isEqualTo(View.VISIBLE);
+        Button rightButton = dialog.findViewById(android.R.id.button1);
+        assertThat(rightButton).isNotNull();
+        assertThat(rightButton.getText())
+                .isEqualTo(
+                        mContext.getString(R.string.audio_streams_dialog_turn_off_talkback_button));
         assertThat(rightButton.hasOnClickListeners()).isTrue();
 
         dialog.cancel();
@@ -263,28 +338,9 @@ public class AudioStreamsProgressCategoryControllerTest {
         shadowOf(Looper.getMainLooper()).idle();
 
         verify(mLeBroadcastAssistant).registerServiceCallBack(any(), any());
-        verify(mLeBroadcastAssistant).startSearchingForSources(any());
+        verify(mAudioStreamScanHelper).startScanning();
 
-        var dialog = ShadowAlertDialog.getLatestAlertDialog();
-        assertThat(dialog).isNull();
-
-        verify(mController, never()).moveToState(any(), any());
-    }
-
-    @Test
-    public void testOnStart_initHasDevice_scanningInProgress() {
-        // Setup a device
-        ShadowAudioStreamsHelper.setCachedBluetoothDeviceInSharingOrLeConnected(mDevice);
-        when(mLeBroadcastAssistant.isSearchInProgress()).thenReturn(true);
-
-        mController.onStart(mLifecycleOwner);
-        shadowOf(Looper.getMainLooper()).idle();
-
-        verify(mLeBroadcastAssistant).registerServiceCallBack(any(), any());
-        verify(mLeBroadcastAssistant).stopSearchingForSources();
-        verify(mLeBroadcastAssistant).startSearchingForSources(any());
-
-        var dialog = ShadowAlertDialog.getLatestAlertDialog();
+        var dialog = ShadowAlertDialogCompat.getLatestAlertDialog();
         assertThat(dialog).isNull();
 
         verify(mController, never()).moveToState(any(), any());
@@ -292,22 +348,21 @@ public class AudioStreamsProgressCategoryControllerTest {
 
     @Test
     public void testOnStart_initHasDevice_getPresentSources() {
+        mSetFlagsRule.enableFlags(FLAG_ENABLE_LE_AUDIO_SHARING);
         mSetFlagsRule.enableFlags(FLAG_AUDIO_SHARING_HYSTERESIS_MODE_FIX);
 
         // Setup a device
         ShadowAudioStreamsHelper.setCachedBluetoothDeviceInSharingOrLeConnected(mDevice);
 
-        List<BluetoothLeBroadcastReceiveState> connectedList = new ArrayList<>();
         // Empty connected device list
-        when(mAudioStreamsHelper.getAllConnectedSources()).thenReturn(connectedList);
+        when(mAudioStreamsHelper.getAllSourcesByDevice()).thenReturn(emptyMap());
 
         mController.onStart(mLifecycleOwner);
         shadowOf(Looper.getMainLooper()).idle();
 
-        verify(mAudioStreamsHelper).getAllPresentSources();
-        verify(mLeBroadcastAssistant).startSearchingForSources(any());
+        verify(mAudioStreamScanHelper).startScanning();
 
-        var dialog = ShadowAlertDialog.getLatestAlertDialog();
+        var dialog = ShadowAlertDialogCompat.getLatestAlertDialog();
         assertThat(dialog).isNull();
 
         verify(mController, never()).moveToState(any(), any());
@@ -342,7 +397,7 @@ public class AudioStreamsProgressCategoryControllerTest {
     }
 
     @Test
-    public void testOnStart_handleSourceAlreadyConnected() {
+    public void testOnStart_handleSourceAlreadyStreaming_useNameFromMetadata() {
         // Setup a device
         ShadowAudioStreamsHelper.setCachedBluetoothDeviceInSharingOrLeConnected(mDevice);
 
@@ -350,8 +405,14 @@ public class AudioStreamsProgressCategoryControllerTest {
         BluetoothLeBroadcastReceiveState connected =
                 createConnectedMock(ALREADY_CONNECTED_BROADCAST_ID);
         List<BluetoothLeBroadcastReceiveState> list = new ArrayList<>();
+        var data = mock(BluetoothLeAudioContentMetadata.class);
+        when(connected.getSubgroupMetadata()).thenReturn(ImmutableList.of(data));
+        when(data.getProgramInfo()).thenReturn(BROADCAST_NAME_1);
         list.add(connected);
-        when(mAudioStreamsHelper.getAllConnectedSources()).thenReturn(list);
+        when(mMetadata.getBroadcastId()).thenReturn(ALREADY_CONNECTED_BROADCAST_ID);
+        when(mMetadata.getBroadcastName()).thenReturn(BROADCAST_NAME_2);
+        when(mLeBroadcastAssistant.getSourceMetadata(any(), anyInt())).thenReturn(mMetadata);
+        when(mAudioStreamsHelper.getAllSourcesByDevice()).thenReturn(Map.of(mSourceDevice, list));
 
         // Handle already connected source in onStart
         mController.displayPreference(mScreen);
@@ -369,6 +430,7 @@ public class AudioStreamsProgressCategoryControllerTest {
         assertThat(preference.getValue()).isNotNull();
         assertThat(preference.getValue().getAudioStreamBroadcastId())
                 .isEqualTo(ALREADY_CONNECTED_BROADCAST_ID);
+        assertThat(preference.getValue().getTitle()).isEqualTo(BROADCAST_NAME_2);
         assertThat(state.getValue()).isEqualTo(SOURCE_ADDED);
     }
 
@@ -390,18 +452,19 @@ public class AudioStreamsProgressCategoryControllerTest {
         mController.setSourceFromQrCode(
                 metadataWithNoIdAndSameName, SourceOriginForLogging.UNKNOWN);
 
+        // Handle both source from qr code and already connected source in onStart
+        mController.displayPreference(mScreen);
+        mController.onStart(mLifecycleOwner);
+        shadowOf(Looper.getMainLooper()).idle();
+
         // Setup a connected source with name BROADCAST_NAME_1 and id
         BluetoothLeBroadcastReceiveState connected =
                 createConnectedMock(ALREADY_CONNECTED_BROADCAST_ID);
         var data = mock(BluetoothLeAudioContentMetadata.class);
         when(connected.getSubgroupMetadata()).thenReturn(ImmutableList.of(data));
         when(data.getProgramInfo()).thenReturn(BROADCAST_NAME_1);
-        when(mAudioStreamsHelper.getAllConnectedSources()).thenReturn(ImmutableList.of(connected));
-
-        // Handle both source from qr code and already connected source in onStart
-        mController.displayPreference(mScreen);
-        mController.onStart(mLifecycleOwner);
-        shadowOf(Looper.getMainLooper()).idle();
+        when(mDevice.getDevice()).thenReturn(mSourceDevice);
+        mController.handleSourceStreaming(mSourceDevice, connected);
 
         // Verify two preferences created, one moved to state WAIT_FOR_SYNC, one to SOURCE_ADDED.
         // Both has ALREADY_CONNECTED_BROADCAST_ID as the UNSET_ID is updated to match.
@@ -554,7 +617,7 @@ public class AudioStreamsProgressCategoryControllerTest {
                 .isEqualTo(BROADCAST_NAME_2);
         assertThat(newlyFoundSource.getAudioStreamMetadata().getBroadcastCode())
                 .isEqualTo(BROADCAST_CODE);
-        assertThat(states.get(1)).isEqualTo(ADD_SOURCE_WAIT_FOR_RESPONSE);
+        assertThat(states.get(1)).isEqualTo(ADD_SOURCE_WAIT_FOR_RESPONSE_FROM_QR);
     }
 
     @Test
@@ -565,8 +628,8 @@ public class AudioStreamsProgressCategoryControllerTest {
         // Setup source already connected
         BluetoothLeBroadcastReceiveState connected =
                 createConnectedMock(ALREADY_CONNECTED_BROADCAST_ID);
-        when(mAudioStreamsHelper.getAllConnectedSources()).thenReturn(ImmutableList.of(connected));
-
+        when(mAudioStreamsHelper.getAllSourcesByDevice())
+                .thenReturn(Map.of(mSourceDevice, List.of(connected)));
         // Handle source already connected in onStart
         mController.displayPreference(mScreen);
         mController.onStart(mLifecycleOwner);
@@ -593,7 +656,7 @@ public class AudioStreamsProgressCategoryControllerTest {
     }
 
     @Test
-    public void testHandleSourceLost_removed() {
+    public void testHandleSourceLost_updateMetadataAndState() {
         // Setup a device
         ShadowAudioStreamsHelper.setCachedBluetoothDeviceInSharingOrLeConnected(mDevice);
 
@@ -609,25 +672,27 @@ public class AudioStreamsProgressCategoryControllerTest {
         mController.handleSourceLost(NEWLY_FOUND_BROADCAST_ID);
         shadowOf(Looper.getMainLooper()).idle();
 
-        ArgumentCaptor<AudioStreamPreference> preferenceToAdd =
-                ArgumentCaptor.forClass(AudioStreamPreference.class);
-        ArgumentCaptor<AudioStreamPreference> preferenceToRemove =
+        ArgumentCaptor<AudioStreamPreference> preference =
                 ArgumentCaptor.forClass(AudioStreamPreference.class);
         ArgumentCaptor<AudioStreamsProgressCategoryController.AudioStreamState> state =
                 ArgumentCaptor.forClass(
                         AudioStreamsProgressCategoryController.AudioStreamState.class);
 
-        // Verify a new preference is created with state SYNCED.
-        verify(mController).moveToState(preferenceToAdd.capture(), state.capture());
-        assertThat(preferenceToAdd.getValue()).isNotNull();
-        assertThat(preferenceToAdd.getValue().getAudioStreamBroadcastId())
-                .isEqualTo(NEWLY_FOUND_BROADCAST_ID);
-        assertThat(state.getValue()).isEqualTo(SYNCED);
+        verify(mController, times(2)).moveToState(preference.capture(), state.capture());
+        List<AudioStreamPreference> preferences = preference.getAllValues();
+        assertThat(preferences.size()).isEqualTo(2);
+        List<AudioStreamsProgressCategoryController.AudioStreamState> states = state.getAllValues();
+        assertThat(states.size()).isEqualTo(2);
 
-        // Verify the preference with NEWLY_FOUND_BROADCAST_ID is removed.
-        verify(mPreference).removePreference(preferenceToRemove.capture());
-        assertThat(preferenceToRemove.getValue().getAudioStreamBroadcastId())
+        // Verify a new preference is created with state SYNCED.
+        assertThat(preferences.get(0).getAudioStreamBroadcastId())
                 .isEqualTo(NEWLY_FOUND_BROADCAST_ID);
+        assertThat(states.get(0)).isEqualTo(SYNCED);
+
+        // Verify the new source is updated to state SOURCE_LOST
+        assertThat(preferences.get(1).getAudioStreamBroadcastId())
+                .isEqualTo(NEWLY_FOUND_BROADCAST_ID);
+        assertThat(states.get(1)).isEqualTo(SOURCE_LOST);
     }
 
     @Test
@@ -644,8 +709,8 @@ public class AudioStreamsProgressCategoryControllerTest {
         shadowOf(Looper.getMainLooper()).idle();
 
         // A new source found is lost, but the source is still connected
-        BluetoothLeBroadcastReceiveState connected = createConnectedMock(NEWLY_FOUND_BROADCAST_ID);
-        when(mAudioStreamsHelper.getAllConnectedSources()).thenReturn(ImmutableList.of(connected));
+        when(mAudioStreamsHelper.getConnectedBroadcastIdAndState(anyBoolean())).thenReturn(
+                Map.of(NEWLY_FOUND_BROADCAST_ID, STREAMING));
         mController.handleSourceLost(NEWLY_FOUND_BROADCAST_ID);
         shadowOf(Looper.getMainLooper()).idle();
 
@@ -674,7 +739,8 @@ public class AudioStreamsProgressCategoryControllerTest {
         // Setup already connected source
         BluetoothLeBroadcastReceiveState connected =
                 createConnectedMock(ALREADY_CONNECTED_BROADCAST_ID);
-        when(mAudioStreamsHelper.getAllConnectedSources()).thenReturn(ImmutableList.of(connected));
+        when(mAudioStreamsHelper.getAllSourcesByDevice())
+                .thenReturn(Map.of(mSourceDevice, List.of(connected)));
 
         // Handle connected source in onStart
         mController.displayPreference(mScreen);
@@ -682,29 +748,31 @@ public class AudioStreamsProgressCategoryControllerTest {
         shadowOf(Looper.getMainLooper()).idle();
 
         // The connect source is no longer connected
-        when(mAudioStreamsHelper.getAllConnectedSources()).thenReturn(emptyList());
+        when(mAudioStreamsHelper.getAllSourcesByDevice()).thenReturn(emptyMap());
         mController.handleSourceRemoved();
         shadowOf(Looper.getMainLooper()).idle();
 
-        ArgumentCaptor<AudioStreamPreference> preferenceToAdd =
-                ArgumentCaptor.forClass(AudioStreamPreference.class);
-        ArgumentCaptor<AudioStreamPreference> preferenceToRemove =
+        ArgumentCaptor<AudioStreamPreference> preference =
                 ArgumentCaptor.forClass(AudioStreamPreference.class);
         ArgumentCaptor<AudioStreamsProgressCategoryController.AudioStreamState> state =
                 ArgumentCaptor.forClass(
                         AudioStreamsProgressCategoryController.AudioStreamState.class);
 
-        // Verify a new preference is created with state SOURCE_ADDED.
-        verify(mController).moveToState(preferenceToAdd.capture(), state.capture());
-        assertThat(preferenceToAdd.getValue()).isNotNull();
-        assertThat(preferenceToAdd.getValue().getAudioStreamBroadcastId())
-                .isEqualTo(ALREADY_CONNECTED_BROADCAST_ID);
-        assertThat(state.getValue()).isEqualTo(SOURCE_ADDED);
+        verify(mController, times(2)).moveToState(preference.capture(), state.capture());
+        List<AudioStreamPreference> preferences = preference.getAllValues();
+        assertThat(preferences.size()).isEqualTo(2);
+        List<AudioStreamsProgressCategoryController.AudioStreamState> states = state.getAllValues();
+        assertThat(states.size()).isEqualTo(2);
 
-        // Verify the preference with ALREADY_CONNECTED_BROADCAST_ID is removed.
-        verify(mPreference).removePreference(preferenceToRemove.capture());
-        assertThat(preferenceToRemove.getValue().getAudioStreamBroadcastId())
+        // Verify the connected preference is created with state SOURCE_ADDED.
+        assertThat(preferences.get(0).getAudioStreamBroadcastId())
                 .isEqualTo(ALREADY_CONNECTED_BROADCAST_ID);
+        assertThat(states.get(0)).isEqualTo(SOURCE_ADDED);
+
+        // Verify the connected preference is updated to state SOURCE_LOST
+        assertThat(preferences.get(1).getAudioStreamBroadcastId())
+                .isEqualTo(ALREADY_CONNECTED_BROADCAST_ID);
+        assertThat(states.get(1)).isEqualTo(SOURCE_LOST);
     }
 
     @Test
@@ -715,7 +783,8 @@ public class AudioStreamsProgressCategoryControllerTest {
         // Setup a connected source
         BluetoothLeBroadcastReceiveState connected =
                 createConnectedMock(ALREADY_CONNECTED_BROADCAST_ID);
-        when(mAudioStreamsHelper.getAllConnectedSources()).thenReturn(ImmutableList.of(connected));
+        when(mAudioStreamsHelper.getAllSourcesByDevice())
+                .thenReturn(Map.of(mSourceDevice, List.of(connected)));
 
         // Handle connected source in onStart
         mController.displayPreference(mScreen);
@@ -796,13 +865,15 @@ public class AudioStreamsProgressCategoryControllerTest {
     }
 
     @Test
-    public void testHandleSourcePresent_updateState() {
+    public void testHandleSourcePaused_updateState() {
         mSetFlagsRule.enableFlags(FLAG_AUDIO_SHARING_HYSTERESIS_MODE_FIX);
         String address = "11:22:33:44:55:66";
 
         // Setup a device
         ShadowAudioStreamsHelper.setCachedBluetoothDeviceInSharingOrLeConnected(mDevice);
 
+        // Create new controller to enable hysteresis mode
+        mController = spy(new TestController(mContext, KEY));
         // Setup mPreference so it's not null
         mController.displayPreference(mScreen);
 
@@ -821,7 +892,7 @@ public class AudioStreamsProgressCategoryControllerTest {
         when(receiveState.getBisSyncState()).thenReturn(bisSyncState);
 
         // The new found source is identified as failed to connect
-        mController.handleSourcePresent(receiveState);
+        mController.handleSourcePaused(mSourceDevice, receiveState);
         shadowOf(Looper.getMainLooper()).idle();
 
         ArgumentCaptor<AudioStreamPreference> preference =
@@ -845,6 +916,70 @@ public class AudioStreamsProgressCategoryControllerTest {
         assertThat(preferences.get(1).getAudioStreamBroadcastId())
                 .isEqualTo(NEWLY_FOUND_BROADCAST_ID);
         assertThat(states.get(1)).isEqualTo(SOURCE_PRESENT);
+    }
+
+    @Test
+    public void testHandleSourcePaused_retryBadCode_skipUpdateState() {
+        mSetFlagsRule.enableFlags(FLAG_AUDIO_SHARING_HYSTERESIS_MODE_FIX);
+        String address = "11:22:33:44:55:66";
+
+        // Setup a device
+        ShadowAudioStreamsHelper.setCachedBluetoothDeviceInSharingOrLeConnected(mDevice);
+
+        // Create new controller to enable hysteresis mode
+        mController = spy(new TestController(mContext, KEY));
+        // Setup mPreference so it's not null
+        mController.displayPreference(mScreen);
+
+        // A new source found
+        when(mMetadata.getBroadcastId()).thenReturn(NEWLY_FOUND_BROADCAST_ID);
+        mController.handleSourceFound(mMetadata);
+        shadowOf(Looper.getMainLooper()).idle();
+
+        // The newly found source is identified as having a bad code
+        BluetoothLeBroadcastReceiveState badCode = mock(BluetoothLeBroadcastReceiveState.class);
+        when(badCode.getBroadcastId()).thenReturn(NEWLY_FOUND_BROADCAST_ID);
+        when(badCode.getPaSyncState())
+                .thenReturn(BluetoothLeBroadcastReceiveState.PA_SYNC_STATE_SYNCHRONIZED);
+        when(badCode.getBigEncryptionState())
+                .thenReturn(BluetoothLeBroadcastReceiveState.BIG_ENCRYPTION_STATE_BAD_CODE);
+        mController.handleSourceConnectBadCode(badCode);
+        shadowOf(Looper.getMainLooper()).idle();
+
+        // Device retrying with bad code
+        BluetoothLeBroadcastReceiveState receiveState =
+                mock(BluetoothLeBroadcastReceiveState.class);
+        when(receiveState.getBroadcastId()).thenReturn(NEWLY_FOUND_BROADCAST_ID);
+        when(receiveState.getSourceDevice()).thenReturn(mSourceDevice);
+        when(mSourceDevice.getAddress()).thenReturn(address);
+        List<Long> bisSyncState = new ArrayList<>();
+        when(receiveState.getBisSyncState()).thenReturn(bisSyncState);
+
+        mController.handleSourcePaused(mSourceDevice, receiveState);
+        shadowOf(Looper.getMainLooper()).idle();
+
+        ArgumentCaptor<AudioStreamPreference> preference =
+                ArgumentCaptor.forClass(AudioStreamPreference.class);
+        ArgumentCaptor<AudioStreamsProgressCategoryController.AudioStreamState> state =
+                ArgumentCaptor.forClass(
+                        AudioStreamsProgressCategoryController.AudioStreamState.class);
+
+        verify(mController, times(2)).moveToState(preference.capture(), state.capture());
+        List<AudioStreamPreference> preferences = preference.getAllValues();
+        assertThat(preferences.size()).isEqualTo(2);
+        List<AudioStreamsProgressCategoryController.AudioStreamState> states = state.getAllValues();
+        assertThat(states.size()).isEqualTo(2);
+
+        // Verify one preference is created with SYNCED
+        assertThat(preferences.get(0).getAudioStreamBroadcastId())
+                .isEqualTo(NEWLY_FOUND_BROADCAST_ID);
+        assertThat(states.get(0)).isEqualTo(SYNCED);
+
+        // Verify the preference is updated to state BAD_CODE, and there's no preference updated
+        // to PAUSED
+        assertThat(preferences.get(1).getAudioStreamBroadcastId())
+                .isEqualTo(NEWLY_FOUND_BROADCAST_ID);
+        assertThat(states.get(1)).isEqualTo(ADD_SOURCE_BAD_CODE);
     }
 
     private static BluetoothLeBroadcastReceiveState createConnectedMock(int id) {
